# CASR

./: .env.example  .gitignore  README.md  pyproject.toml  requirements.txt
benchmarks/: EXECUTION_GUIDE.md  IMPLEMENTATION_SUMMARY.md  README.md  __init__.py  adversarial_benchmark.py  dataset_generator.py  metrics.py  performance_benchmark.py  retrieval_benchmark.py  run_benchmarks.py  security_benchmark.py  visualize.py
config/: __init__.py  settings.py
scripts/: index_documents.py  query.py  setup.py
src/: __init__.py
src/api/: __init__.py  app.py  dependencies.py  middleware.py
src/api/routes/: __init__.py  documents.py  health.py  queries.py  users.py
src/indexing/: __init__.py  chunker.py  contextualizer.py  embedder.py  index_manager.py
src/models/: __init__.py  documents.py  policies.py  queries.py  users.py
src/retrieval/: __init__.py  analyzer.py  reranker.py  retriever.py
src/security/: __init__.py  abac.py  audit.py  policies.py  rbac.py
src/storage/: __init__.py  base.py  chroma_store.py  pinecone_store.py  weaviate_store.py
tests/: conftest.py  test_api.py  test_indexing.py  test_models.py  test_security.py
